[project]
name = "comfyui_steudio"
description = "Nodes: TileSplit (Dynamic), TileMerge (Dynamic)"
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/Steudio/ComfyUI_Steudio"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI_Steudio"
Icon = ""
