# pyproject.toml
[project]
name = "comfyui_steudio" # Unique identifier for your node. Immutable after creation.
description = "Divide and Conquer Node Suite: It calculates the optimal upscale resolution and seamlessly divides the image into tiles, ready for individual processing using your preferred workflow. After processing, the tiles are seamlessly merged into a larger image, offering sharper and more detailed visuals."
version = "2.8.0-beta"
license = { file = "LICENSE.txt" }
dependencies  = [] # Filled in from requirements.txt

[project.urls]
Repository = "https://github.com/Steudio/ComfyUI_Steudio"

[tool.comfy]
PublisherId = "steudio"
DisplayName = "ComfyUI_Steudio"
Icon = "https://raw.githubusercontent.com/Steudio/ComfyUI_Steudio/main/Images/Steudio_Logo_Circle.png" # SVG, PNG, JPG or GIF (MAX. 800x400px)
